# qtsparkle

./: CMakeLists.txt  README.md
cmake/: Translations.cmake
exampleapp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt  appcast.cpp  appcast.h  compareversions.cpp  compareversions.h  followredirects.cpp  followredirects.h  translations.ts  uicontroller.cpp  uicontroller.h  updatechecker.cpp  updatechecker.h  updatedialog.cpp  updatedialog.h  updatedialog.ui  updater.cpp  updater.h
translations/: af.ts  br.ts  ca.ts  cs.ts  da.ts  da_DK.ts  de.ts  el.ts  es.ts  es_AR.ts  et.ts  eu.ts  fa.ts  fi.ts  fr.ts  hr.ts  hu.ts  it.ts  ja.ts  ka.ts  lt.ts  nl.ts  pl.ts  pt.ts  pt_BR.ts  ro.ts  ru.ts  sk.ts  sl.ts  tr.ts  tr_TR.ts  uk.ts  uz.ts  vi.ts  zh_CN.ts  zh_TW.ts
